--- a/nextjs-client/app/globals.css
+++ b/nextjs-client/app/globals.css
@@ -75,3 +75,27 @@ body {
     scrollbar-width: none; /* Firefox */
   }
 }
+
+/* color gradient custome */
+.btn-gradient {
+  @apply bg-gradient-to-r from-purple-500 to-pink-500 text-white;
+}
+
+.dark .btn-gradient {
+  @apply bg-gradient-to-r from-pink-500 to-orange-500;
+}
+.btn-gradient-blue {
+  @apply bg-gradient-to-br from-blue-400 to-green-400 text-white;
+}
+
+.dark .btn-gradient-blue {
+  @apply bg-gradient-to-bl from-green-500 to-blue-600;
+}
+
+.bg-gradient {
+  @apply bg-gradient-to-br from-blue-50 to-white;
+}
+
+.dark .bg-gradient {
+  @apply bg-gradient-to-br from-gray-800;
+}
